--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 <!--========== FOOTER ==========-->
 <footer class="footer" id="footer">
     <div class="container">
-        <div class="footer__container d-flex row col-xxl-12 col-xl-12 col-lg-12">'
+        <div class="footer__container d-flex col-xxl-12 col-xl-12 col-lg-12">'
             <div class="footer__left col-xxl-6 col-xl-6 col-lg-6">
                 <div class="footer__logos">
                     <a href="#header" class="footer__logo"><img src="./images/svg/footer-logo.svg" alt=""></a>
@@ -620,7 +620,7 @@
                                         alt="whats"></a>
                             </div>
                         </div>
-                        <div class="footer__right-wrapper row">
+                        <div class="footer__right-wrapper ">
                             <div class="footer__right-links">
                                 <a href="#" class="footer__right-link"><img src="./images/svg/face.svg" alt="whats"></a>
                             </div>
